Refactored API request to create a Request Object through a Factory for better readabilty and maintenance also fixted some lint errors any class that extends Request will now handle specfic requests